--- a/css/main.css
+++ b/css/main.css
@@ -914,3 +914,72 @@ footer p {
 .f-n{
     float: none;
 }
+
+/***** Modal *****/
+
+.modal-content {
+	background: #3a3a3a;
+	-moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	border: 0;
+	text-align: left;
+}
+
+.modal-header {
+	padding: 25px 25px 15px 25px;
+	background: #333;
+	border: 0;
+	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
+	color: #888;
+}
+
+.modal-header .close {
+	font-size: 36px;
+	color: #eee;
+	font-weight: 300;
+	text-shadow: none;
+	opacity: 1;
+}
+
+.modal-title {
+	margin-bottom: 10px;
+	line-height: 30px;
+	color: #eee;
+}
+
+.modal-body {
+	background: #3a3a3a;
+	text-align: left;
+	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+}
+
+.modal-body img {
+	margin-bottom: 15px;
+}
+
+.modal-body form textarea {
+	height: 100px;
+}
+
+.modal-body form .input-error {
+	border-color: #fd625e;
+}
+
+.modal-body h4 {
+  color: #ccc;
+  font-size: 14px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 0.2rem;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.modal-body p {
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
+.modal-body .label {
+  border-radius: 5px;
+	padding: 5px 10px;
+}
